deploy one runner

--- a/k/gha/kustomization.yaml
+++ b/k/gha/kustomization.yaml
@@ -8,3 +8,6 @@ helmCharts:
   repo: https://actions-runner-controller.github.io/actions-runner-controller
   includeCRDs: true
   valuesInline:
+
+resources:
+  - defn-dev.yaml
