--- a/k/gha/defn-dev.yaml
+++ b/k/gha/defn-dev.yaml
@@ -1,16 +1,16 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerSet
 metadata:
-  name: defn
+  name: defn-dev
   namespace: gha
 spec:
   replicas: 1
   repository: defn/dev
   selector:
     matchLabels:
-      app: defn
-  serviceName: defn
+      app: defn-dev
+  serviceName: defn-dev
   template:
     metadata:
       labels:
-        app: defn
+        app: defn-dev
