--- a/e/remo/ns.yaml
+++ b/e/remo/ns.yaml
@@ -17,6 +17,10 @@ spec:
             namespace: cert-manager
             cluster: in-cluster
             path: cert-manager
+          - name: vault
+            namespace: vault
+            cluster: in-cluster
+            path: vault
           - name: kyverno
             namespace: kyverno
             cluster: in-cluster
