--- a/k/vault/kustomization.yaml
+++ b/k/vault/kustomization.yaml
@@ -36,3 +36,23 @@ helmCharts:
 
 resources:
 - ingress.yaml
+
+patchesStrategicMerge:
+- |-
+  apiVersion: apps/v1
+  kind: StatefulSet
+  metadata:
+    name: vault
+    namespace: vault
+  spec:
+    template:
+      spec:
+        containers:
+          - name: vault
+            env: 
+              - 
+                name: VAULT_TOKEN
+                valueFrom:
+                  secretKeyRef:
+                    name: vault-unseal
+                    key: VAULT_TOKEN
