--- a/e/remo/ns.yaml
+++ b/e/remo/ns.yaml
@@ -41,6 +41,10 @@ spec:
             namespace: traefik
             cluster: in-cluster
             path: traefik-remo
+          - name: datadog
+            namespace: datadog
+            cluster: in-cluster
+            path: datadog
   template:
     metadata:
       name: "{{name}}"
