move site specific make targets

--- a/Makefile.site
+++ b/Makefile.site
@@ -1,6 +1,11 @@
 include Makefile.common
 
 init-site:
+	k create ns vault
+	n vault delete secret vault-unseal
+	n vault create secret generic vault-unseal --from-literal=VAULT_TOKEN="$$(env VAULT_TOKEN="$$(v token create -policy="autounseal-remo" -wrap-ttl=60 -format json | jq -r '.wrap_info.token')" v unwrap -format json | jq -r '.auth.client_token')"
+	n vault delete pod vault-0
+	$(MAKE) cert
 	@aws --profile meh sts get-caller-identity
 	@pass hello
 
