--- a/Makefile.common
+++ b/Makefile.common
@@ -48,7 +48,7 @@ init-argocd:
 	sleep 10; $(MAKE) argocd-login
 
 deploy:
-	kubectl --context argocd apply -f e/$(control).yaml
+	cd "$${DEFN_DEV_WORKDIR:-$${HOME}}" && kubectl --context argocd apply -f e/$(control).yaml
 	argocd app sync sets-$(control)
 	argocd app list
 
