--- a/Makefile.common
+++ b/Makefile.common
@@ -3,7 +3,7 @@ cache ?=
 push ?= --push
 workdir ?= /home/ubuntu
 tilt_port ?= 10350
-name ?= $(shell uname -n | cut -d. -f1)
+name ?= $(shell uname -n | cut -d. -f1 | tr A-Z a-z)
 k3d_name ?= $(name)
 context ?= k3d-$(name)
 podname ?= $(name)-0
