--- a/Makefile.site
+++ b/Makefile.site
@@ -1,6 +1,7 @@
 include Makefile.common
 
 init-site:
+	$(MAKE) argocd-login
 	-k create ns vault
 	-n vault delete secret vault-unseal
 	n vault create secret generic vault-unseal --from-literal=VAULT_TOKEN="$$(env VAULT_TOKEN="$$(v token create -policy="autounseal-remo" -wrap-ttl=60 -format json | jq -r '.wrap_info.token')" v unwrap -format json | jq -r '.auth.client_token')"
