--- a/Makefile.common
+++ b/Makefile.common
@@ -30,8 +30,8 @@ init:
 	$(MAKE) init-site
 
 init-inner:
-	-git clone git@github.com:defn/dev work/dev
-	-git clone git@github.com:jojomomojo/password-store work/password-store
+	-git clone https://github.com/defn/dev work/dev
+	-git clone https://github.com/jojomomojo/password-store work/password-store
 	-cd work/password-store && git crypt unlock && git pull
 	$(MAKE) vault-unseal
 	$(MAKE) kubeconfig
