--- a/Makefile.site
+++ b/Makefile.site
@@ -62,7 +62,7 @@ images:
 amd arm:
 	git pull
 	git push
-	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@; else env PATH="$$HOME/bin/fake:$$PATH" earthly --remote-cache=$(cache)defn/cache:updates-$@ $(push) +"$@"64-update --repo=; fi
+	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@; else env PATH="$$HOME/bin/fake:$$PATH" earthly --remote-cache=$(cache)defn/cache:updates-$@ $(push) +"$@" --repo=; fi
 
 shell:
 	docker run --rm -ti $(repo)defn/dev bash -l
