install nbb, fly

--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ CREDENTIAL_PASS=0.6.4
 CUE=0.4.3
 DIFFT=0.31.0
 DOCTL=1.78.0
-EARTHLY=0.6.19
+EARTHLY=0.6.21
+FLYCTL=0.0.365
 GH=2.14.3
 GOLANG=1.18.4
 GRPCURL=1.8.6
