--- a/.env
+++ b/.env
@@ -2,12 +2,13 @@ ARGO=3.3.8
 ARGOCD=2.4.7
 ASDF=0.10.1
 ASDFX=0.10.2
+AWSCLI=2.7.13
 AWSVAULT=6.6.0
 BUF=1.6.0
 CDKTF=0.11.2
 CILIUM=0.12.0
 CLOUDFLARED=2022.7.1
-CREDENTIAL_PASS=0.6.4
+CREDENTIALPASS=0.6.4
 CUE=0.4.3
 DIFFT=0.31.0
 DOCTL=1.78.0
