--- a/Makefile.common
+++ b/Makefile.common
@@ -100,6 +100,7 @@ cluster-inner:
 	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0
 	docker update --restart=no $(context)-server-0
 	docker exec $(context)-server-0 touch /etc/passwd
+	cd tf/$(name) && make init plan apply
 
 vault-unseal:
 	pass Unseal_Key_1 | curl -sSL -X PUT -d @<(jq -nrR 'inputs|{key:.}|@json') http://localhost:8200/v1/sys/unseal
