--- a/Makefile.site
+++ b/Makefile.site
@@ -1,14 +1,16 @@
 include Makefile.common
 
 init-site:
+	@aws --profile meh sts get-caller-identity
+	@pass hello
+
+deploy-site:
 	$(MAKE) argocd-login
 	-k create ns vault
 	-n vault delete secret vault-unseal
 	n vault create secret generic vault-unseal --from-literal=VAULT_TOKEN="$$(env VAULT_TOKEN="$$(v token create -policy="autounseal-remo" -wrap-ttl=60 -format json | jq -r '.wrap_info.token')" v unwrap -format json | jq -r '.auth.client_token')"
 	-n vault delete pod vault-0
 	$(MAKE) cert
-	@aws --profile meh sts get-caller-identity
-	@pass hello
 
 restart: # Restart everything
 	git pull
