--- a/Makefile.common
+++ b/Makefile.common
@@ -30,6 +30,7 @@ init:
 	$(MAKE) init-site
 
 init-inner:
+	if ! test -d work/.; then if test -d /work; then ln -nfs /work .; else mkdir -p work; fi; fi
 	-git clone https://github.com/defn/dev work/dev
 	-git clone https://github.com/jojomomojo/password-store work/password-store
 	-cd work/password-store && git crypt unlock && git pull
