--- a/k3d.yaml
+++ b/k3d.yaml
@@ -17,6 +17,9 @@ volumes:
   - volume: tools:/mnt/tools
     nodeFilters:
       - server:0
+  - volume: /var/run/docker.sock:/var/run/docker.sock
+    nodeFilters:
+      - server:0
 options:
   k3d:
     wait: true
