--- a/Makefile.site
+++ b/Makefile.site
@@ -60,12 +60,12 @@ stop: # Stop k3d
 images:
 	git pull
 	git push
-	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@; else earthly --remote-cache=$(cache)defn/cache:updates-$@ $(push) +images; fi
+	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@; else earthly --remote-cache=$(cache)defn/cache:updates-$@ --no-output $(push) +images; fi
 
 amd arm:
 	git pull
 	git push
-	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@; else earthly --remote-cache=$(cache)defn/cache:updates-$@ $(push) +"$@"; fi
+	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@; else earthly --remote-cache=$(cache)defn/cache:updates-$@ --no-output $(push) +"$@"; fi
 
 shell:
 	docker run --rm -ti $(repo)defn/dev bash -l
