--- a/tf/fly/flies/Makefile
+++ b/tf/fly/flies/Makefile
@@ -1,2 +1,3 @@
 %:
-	flyctl deploy --remote-only --config $@.toml
+	rsync -ia ~/.password-store/ .password-store
+	flyctl deploy -a $@ --remote-only --config app.toml
