--- a/tf/fly/flies/app.toml
+++ b/tf/fly/flies/app.toml
@@ -13,8 +13,15 @@ strategy = "immediate"
 allowed_public_ports = []
 auto_rollback = true
 entrypoint = ["/service"]
-cmd = ["make", "trigger"]
+cmd = []
 
 [mounts]
 source = "data"
 destination = "/mnt"
+
+[[services]]
+  internal_port = 22
+  protocol = "tcp"
+
+  [[services.ports]]
+    port = "22"
