create with cluster IP

--- a/k/vcluster/kustomization.yaml
+++ b/k/vcluster/kustomization.yaml
@@ -7,6 +7,8 @@ helmCharts:
   repo: https://charts.loft.sh
   includeCRDs: true
   valuesInline:
+    service:
+      type: ClusterIP
     serviceCIDR: 10.245.0.0/16
     vcluster:
       image: rancher/k3s:v1.23.6-k3s1
