generate vcluster as part of kubeconfig

--- a/Makefile.common
+++ b/Makefile.common
@@ -79,6 +79,11 @@ kubeconfig:
 	kubectl config use-context pod
 	skaffold config set --kube-context pod local-cluster true
 	#kumactl config control-planes add --overwrite --name pod --address http://kuma-control-plane-x-kuma-x-vc0.vc0.svc:5681
+	if vcluster connect vcluster --kube-config ~/.kube/vcluster --kube-config-context-name vcluster --update-current=false --server vcluster.vcluster.svc.cluster.local; then \
+		env KUBECONFIG=~/.kube/config:~/.kube/vcluster kubectl config view --flatten > ~/.kube/config.1; \
+		mv ~/.kube/config.1 ~/.kube/config; \
+		fi
+	k config get-contexts
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
