unique name for vcluster apps

--- a/e/remo-vcluster/ns.yaml
+++ b/e/remo-vcluster/ns.yaml
@@ -9,7 +9,7 @@ spec:
   generators:
     - list:
         elements:
-          - name: kyverno
+          - name: remo-vcluster-kyverno
             namespace: kyverno
             cluster: in-cluster
             path: kyverno
