add k3d, cosign, rekor, fulcio

--- a/.env
+++ b/.env
@@ -8,12 +8,14 @@ BUF=1.7.0
 CDKTF=0.12.0
 CILIUM=0.12.1
 CLOUDFLARED=2022.7.1
+COSIGN=1.10.1
 CREDENTIALPASS=0.6.4
 CUE=0.4.3
 DIFFT=0.32.0
 DOCTL=1.78.0
 EARTHLY=0.6.21
 FLYCTL=0.0.367
+FULCIO=0.5.2
 GH=2.14.3
 GOLANG=1.18.5
 GRPCURL=1.8.6
@@ -37,6 +39,7 @@ PACKER=1.8.3
 POWERLINE=1.22.1
 PROTOC=3.20.1
 PYTHON=3.10.6
+REKOR=0.10.0
 SHELLCHECK=0.8.0
 SHFMT=3.5.1
 SKAFFOLD=1.38.0
