--- a/e/remo/ns.yaml
+++ b/e/remo/ns.yaml
@@ -44,7 +44,7 @@ spec:
           - name: dex
             namespace: dex
             cluster: in-cluster
-            path: vcluster
+            path: dex
           - name: traefik
             namespace: traefik
             cluster: in-cluster
