--- a/k/dex/kustomization.yaml
+++ b/k/dex/kustomization.yaml
@@ -8,9 +8,28 @@ helmCharts:
   includeCRDs: true
   valuesInline:
     config:
-      issuer: http://localhost:9999
-
+      issuer: http://localhost:5556
       storage:
-        type: memory
+        type: kubernetes
+        config:
+          inCluster: true
+      web:
+        https: 0.0.0.0:5556
+      connectors:
+      - name: GitHub
+        type: github
+        id: github
+        config:
+          clientID: GITHUB_CLIENT_ID
+          clientSecret: GITHUB_CLIENT_SECRET
+          redirectURI: http://localhost:5556/callback
 
-      enablePasswordDB: true
+      oauth2:
+        skipApprovalScreen: true
+
+      staticClients:
+      - name: Traefik Forward Auth
+        id: forward-auth
+        secret: 6bbc3f2a6d55a3917e068dff5b07a476
+        redirectURIs:
+        - http://localhost:5556/_oauth
