install forard aith

--- a/e/remo/ns.yaml
+++ b/e/remo/ns.yaml
@@ -49,6 +49,10 @@ spec:
             namespace: traefik
             cluster: in-cluster
             path: traefik-remo
+          - name: traefik-forward-auth
+            namespace: traefik
+            cluster: in-cluster
+            path: traefik-forward-auth
   template:
     metadata:
       name: "{{name}}"
