--- a/k/argocd/ingress.yaml
+++ b/k/argocd/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.entrypoints: https9603
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-dex@kubernetescrd
 spec:
   rules:
     - http:
