make dummy is backup

--- a/Makefile.common
+++ b/Makefile.common
@@ -11,8 +11,14 @@ control ?= $(shell echo $(name) | sed s/-0//)
 domain ?= tiger-mamba.ts.net
 image ?= defn.dev/defn/k3d
 
+dummy_ip ?= 169.254.32.1
+
 trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
+
+dummy-macos:
+	for ip in $(dummy_ip); do if ! ifconfig lo0 | grep "inet $$ip"; then sudo ifconfig lo0 alias "$$ip" netmask 255.255.255.255; fi; done;
+	ifconfig lo0
 
 unlock:
 	cd ~/.password-store && git crypt unlock
