--- a/k/traefik/ingress.yaml
+++ b/k/traefik/ingress.yaml
@@ -29,12 +29,12 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: HostRegexp(`^traefik.{domain:.+}`) && PathPrefix(`/api`)
+      match: PathPrefix(`/api`)
       services:
         - kind: TraefikService
           name: api@internal
     - kind: Rule
-      match: HostRegexp(`^traefik.{domain:.+}`) && PathPrefix(`/`)
+      match: PathPrefix(`/`)
       services:
         - kind: TraefikService
           name: dashboard@internal
