--- a/k/argocd/ingress.yaml
+++ b/k/argocd/ingress.yaml
@@ -6,7 +6,6 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.entrypoints: https9603
-    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-dex@kubernetescrd
 spec:
   rules:
     - http:
@@ -18,3 +17,19 @@ spec:
                 name: argocd-server
                 port:
                   number: 443
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: ts-argocd-websecure
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: HostRegexp(`argocd.{dom:.+}`)
+      services:
+        - name: argocd-server
+          port: 443
+  tls:
+    secretName: default-certificate
