--- a/k/traefik-forward-auth/forward.yaml
+++ b/k/traefik-forward-auth/forward.yaml
@@ -54,7 +54,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ts-traefik-forward-auth
+  name: ts-traefik-forward-auth-websecure
   namespace: traefik
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "true"
