--- a/e/imma/ns.yaml
+++ b/e/imma/ns.yaml
@@ -37,10 +37,18 @@ spec:
             namespace: argo-workflows
             cluster: in-cluster
             path: argo-workflows
+          - name: dex
+            namespace: dex
+            cluster: in-cluster
+            path: dex
           - name: traefik
             namespace: traefik
             cluster: in-cluster
             path: traefik
+          - name: traefik-forward-auth
+            namespace: traefik
+            cluster: in-cluster
+            path: traefik-forward-auth
   template:
     metadata:
       name: "{{name}}"
