--- a/e/imma/ns.yaml
+++ b/e/imma/ns.yaml
@@ -49,6 +49,10 @@ spec:
             namespace: traefik
             cluster: in-cluster
             path: traefik-forward-auth
+          - name: vcluster
+            namespace: vcluster
+            cluster: in-cluster
+            path: vcluster
   template:
     metadata:
       name: "{{name}}"
