--- a/k/dex/ingress.yaml
+++ b/k/dex/ingress.yaml
@@ -1,19 +1,17 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
   name: ts-dex-websecure
   namespace: dex
-  annotations:
-    traefik.ingress.kubernetes.io/router.tls: "true"
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
 spec:
-  rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: dex
-                port:
-                  number: 5556
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: HostRegexp(`dex.{dom:.+}`)
+      services:
+        - name: dex
+          port: 5556
+  tls:
+    secretName: default-certificate
