--- a/k/traefik-forward-auth/forward.yaml
+++ b/k/traefik-forward-auth/forward.yaml
@@ -25,9 +25,14 @@ spec:
         - --providers.oidc.issuer-url=https://dex.remocal.net
         - --providers.oidc.client-id=forward-auth
         - --providers.oidc.client-secret=6bbc3f2a6d55a3917e068dff5b07a476 # dex secret
-      - name: dex-socat
-        image: alpine/socat:1.0.5
-        args: ["tcp-listen:5556,reuseaddr,fork", "tcp:dex.dex:5556"]
+        volumeMounts:
+        - name: tls
+          mountPath: /etc/ssl/certs/remocal.crt
+          subPath: remocal.crt
+      volumes:
+      - name: tls
+        secret:
+          secretName: remocal-tls
 ---
 apiVersion: v1
 kind: Service
