use a dummy admin

--- a/k/dex/kustomization.yaml
+++ b/k/dex/kustomization.yaml
@@ -11,6 +11,12 @@ helmCharts:
       issuer: https://dex.remocal.net
       storage:
         type: memory
+      enablePasswordDB: true
+      staticPasswords:
+        - email: iam@defn.sh
+          username: admin
+          userid: "123456789"
+          hash: "$2a$10$2b2cU8CPhOTaGrs1HRQuAueS7JTT5ZHsHSzYiFPm1leZck7Mc8T4W" 
       web:
         http: 0.0.0.0:5556
       connectors:
