traefik servers port 80 443

--- a/k/traefik/kustomization.yaml
+++ b/k/traefik/kustomization.yaml
@@ -119,6 +119,14 @@ patchesStrategicMerge:
       spec:
         ports:
         - $patch: replace
+        - name: http
+          port: 80
+          protocol: TCP
+          targetPort: web
+        - name: https
+          port: 443
+          protocol: TCP
+          targetPort: websecure
         - name: web
           port: 8000
           protocol: TCP
