--- a/Makefile.common
+++ b/Makefile.common
@@ -66,6 +66,9 @@ tilt:
 login:
 	$(MAKE) argocd-login
 
+github-login:
+	gh auth login -p https -h github.com -w
+
 argocd-login:
 	argocd login --insecure argocd-server.argocd.svc --username admin --password adminadmin \
 		|| (argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')" \
